# CustomSfmlGameEngine

./: CMakeLists.txt  README.md  main.cpp
Engine/: Dependencies.h  Engine.h
Engine/Nodes/: AllNodes.h  Node.cpp  Node.h
Engine/Nodes/NodeSerialization/: ISerializable.h  SceneLoader.cpp  SceneLoader.h
Engine/Nodes/SceneNodes/: CameraNode.cpp  CameraNode.h  SceneNode.cpp  SceneNode.h
Engine/Nodes/SceneNodes/Behaviours/: BehaviourManager.cpp  BehaviourManager.h  BehaviourNode.cpp  BehaviourNode.h
Engine/Nodes/SceneNodes/Behaviours/linearMovement/: LinearRotatorNode.cpp  LinearRotatorNode.h
Engine/Nodes/SceneNodes/Renderers/: DotRendererNode.cpp  DotRendererNode.h  RendererNode.cpp  RendererNode.h  SpriteRendererNode.cpp  SpriteRendererNode.h
Engine/Nodes/SceneNodes/Tilemaps/: TilemapNode.cpp  TilemapNode.h  TilemapRendererNode.cpp  TilemapRendererNode.h
Engine/Rendering/: RendererManager.cpp  RendererManager.h  Rendering.h  SpriteManager.cpp  SpriteManager.h
Engine/Systems/AutoTiles/: AutoTile.cpp  AutoTile.h
Engine/Systems/Behaviours/: BehaviourManager.cpp  BehaviourManager.h
Engine/Systems/Physics/: HitResult.h  Physics.cpp  Physics.h
Engine/Systems/Physics/Shapes/: AABB.h  Circle.h  Collider.cpp  Collider.h  OBB.h
Engine/Systems/Rendering/: RendererManager.cpp  RendererManager.h  SpriteManager.cpp  SpriteManager.h
Engine/Utils/: DataSerializer.cpp  DataSerializer.h  Math.cpp  Math.h  StringConversions.cpp  StringConversions.h  Utils.h
Game/: Game.cpp  Game.h
Game/Behaviours/Camera/: CameraBehaviour.cpp  CameraBehaviour.h  CameraBehaviourNode.cpp  CameraBehaviourNode.h
Resources/Scenes/: MainScene.xml  WindMill.xml
Resources/Sprites/props/Windmill/: windmill_handle.sprt  windmill_wing.sprt
Resources/Tilesets/: Tileset_main.tiles
Ressources/Scenes/: MainScene.xml  WindMill.xml  mainScene.xml
